《深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）》-读书笔记(1), 3.7.4 垃圾收集器参数总结